# serverless-collectives-artifact

./: README.md
analysis/: fmi_benchmarks.ipynb  fmi_mpi_benchmarks.ipynb  lambdaml.ipynb  one_to_many.ipynb  p2p_benchmarks.ipynb
fmi/: README.md  build.sh  deployment.sh  invoke.sh  redeploy.sh  redis_create.sh  redis_deployment.sh  redis_invoke.sh  redis_redeploy.sh  role.sh  smi.json  tcp_deployment.sh  tcp_invoke.sh  tcp_invoke_rep.sh  tcp_redeploy.sh
fmi/out_redis/: allreduce_128_0.json  allreduce_128_1.json  allreduce_128_10.json  allreduce_128_100.json  allreduce_128_101.json  allreduce_128_102.json  allreduce_128_103.json  allreduce_128_104.json  allreduce_128_105.json  allreduce_128_106.json  allreduce_128_107.json  allreduce_128_108.json  allreduce_128_109.json  allreduce_128_11.json  allreduce_128_110.json  allreduce_128_111.json  allreduce_128_112.json  allreduce_128_113.json  allreduce_128_114.json  allreduce_128_115.json  allreduce_128_116.json  allreduce_128_117.json  allreduce_128_118.json  allreduce_128_119.json  allreduce_128_12.json  allreduce_128_120.json  allreduce_128_121.json  allreduce_128_122.json  allreduce_128_123.json  allreduce_128_124.json  allreduce_128_125.json  allreduce_128_126.json  allreduce_128_127.json  allreduce_128_13.json  allreduce_128_14.json  allreduce_128_15.json  (+1488 more)
fmi_vms/: invoke_fmi.sh  smi.json
fmi_vms/src/: CMakeLists.txt  fmi_benchmark.cpp
microbenchmarks/aws/p2p/dynamodb/first_batch/052.communication.key-value_code/cpp/all/: CMakeLists.txt
mpi/: invoke_mpi_by_node.sh  mpi_benchmark.c
results/: README.md
(+104541 files in other folders)
